--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -8,7 +8,6 @@
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
   --background-end-rgb: 255, 255, 255;
-
   --primary-glow: conic-gradient(
     from 180deg at 50% 50%,
     #16abff33 0deg,
@@ -84,7 +83,7 @@ body {
   max-width: 100vw;
   overflow-x: hidden;
 }
-
+/*
 body {
   color: rgb(var(--foreground-rgb));
   background: linear-gradient(
@@ -94,7 +93,7 @@ body {
     )
     rgb(var(--background-start-rgb));
 }
-
+*/
 a {
   color: inherit;
   text-decoration: none;
